@@ -12,14 +12,19 @@ package com.snowplowanalytics.snowplow.lakes.processing
 
 import cats.data.NonEmptyList
 import cats.effect.IO
+import cats.implicits._
 import cats.effect.kernel.Resource
 import cats.effect.testing.specs2.CatsEffect
 import fs2.io.file.Files
-import org.apache.spark.sql.{Row, SparkSession}
-import org.apache.spark.sql.types.{ArrayType, StringType, StructField, StructType}
+import org.apache.spark.rdd.RDD
+import org.apache.spark.sql.{Row, SnowplowSparkBlockProbe, SparkSession}
+import org.apache.spark.sql.catalyst.InternalRow
+import org.apache.spark.sql.types.{ArrayType, DateType, StringType, StructField, StructType, TimestampType}
 import org.specs2.Specification
 
 import java.net.URI
+import java.time.{Instant, LocalDate}
+import java.time.temporal.ChronoUnit
 
 import com.snowplowanalytics.snowplow.lakes.{Config, TestConfig}
 import com.snowplowanalytics.snowplow.lakes.fs.LakeLoaderFileSystem
@@ -34,7 +39,7 @@ class SparkUtilsSpec extends Specification with CatsEffect {
   override val Timeout = 60.seconds
 
   def is = sequential ^ s2"""
-  SparkUtils.localAppendRows should:
+  SparkUtils.encodeBatch, stageBatch and appendStagedBatch should:
     Preserve required struct field nullability when a second batch introduces a new sub-field $e1
     Preserve required array-element struct field nullability (required elements) when a second batch introduces a new sub-field $e2
     Preserve required array-element struct field nullability (optional elements) when a second batch introduces a new sub-field $e3
@@ -46,15 +51,22 @@ class SparkUtilsSpec extends Specification with CatsEffect {
     Keep array element-struct field nullable when the accumulated array already contains nulls for it $e9
     Keep a newly introduced optional struct field nullable when it has no counterpart in the accumulated view $e10
     Keep a doubly-nested struct field nullable when the accumulated view already contains nulls for it $e11
-    Accumulate one partition per batch so the window is not collapsed to a single partition $e13
+    Accumulate one partition per batch, so the window is not collapsed to a single partition $e13
+    Round-trip the java.time values emitted by SparkCaster, which need a lenient encoder $e14
+    Encode every row of a batch distinctly, not repeat the last one $e15
+    Stage the batch in off-heap memory, not on the JVM heap, when asked to $e16
+  SparkUtils.dropView should:
+    Release the window's checkpoint blocks, at either staging level, instead of leaving them to the ContextCleaner $e18
+  SparkUtils.session built from TestConfig should:
+    Reach the staging decision the whole-loader specs expect, on both paths $e17
   SparkUtils.session for a Delta target on GCS should:
     Resolve fs.gs.impl to LakeLoaderFileSystem with the hadoop-gcp connector as delegate $e12
   """
 
   // Spark's unionByName generates an internal struct-cast target type where every field defaults to
-  // nullable=true.  When two consecutive calls to localAppendRows use different inner struct
-  // schemas (e.g. a patch-version adds a new field), the shared fields that were required in the
-  // first schema become nullable in the accumulated view.
+  // nullable=true.  When two consecutive appends use different inner struct schemas (e.g. a
+  // patch-version adds a new field), the shared fields that were required in the first schema
+  // become nullable in the accumulated view.
   //
   // This test reproduces the minimal scenario:
   //   call 1 – schema with  struct<col_a: NOT NULL>
@@ -94,8 +106,8 @@ class SparkUtilsSpec extends Specification with CatsEffect {
 
     for {
       _ <- SparkUtils.initializeLocalDataFrame[IO](spark, viewName)
-      _ <- SparkUtils.localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Row("v1"))), schema1, shouldRestoreNullability = true)
-      _ <- SparkUtils.localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Row("v2", null))), schema2, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Row("v1"))), schema1, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Row("v2", null))), schema2, shouldRestoreNullability = true)
       (colANullable, colAValues) <- IO.blocking {
                                       import spark.implicits._
                                       val df = spark.table(viewName)
@@ -151,9 +163,8 @@ class SparkUtilsSpec extends Specification with CatsEffect {
 
     for {
       _ <- SparkUtils.initializeLocalDataFrame[IO](spark, viewName)
-      _ <- SparkUtils.localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Seq(Row("v1")))), schema1, shouldRestoreNullability = true)
-      _ <- SparkUtils
-             .localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Seq(Row("v2", null)))), schema2, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Seq(Row("v1")))), schema1, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Seq(Row("v2", null)))), schema2, shouldRestoreNullability = true)
       colANullable <- IO.blocking {
                         spark
                           .table(viewName)
@@ -209,9 +220,8 @@ class SparkUtilsSpec extends Specification with CatsEffect {
 
     for {
       _ <- SparkUtils.initializeLocalDataFrame[IO](spark, viewName)
-      _ <- SparkUtils.localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Seq(Row("v1")))), schema1, shouldRestoreNullability = true)
-      _ <- SparkUtils
-             .localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Seq(Row("v2", null)))), schema2, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Seq(Row("v1")))), schema1, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Seq(Row("v2", null)))), schema2, shouldRestoreNullability = true)
       colANullable <- IO.blocking {
                         spark
                           .table(viewName)
@@ -280,9 +290,8 @@ class SparkUtilsSpec extends Specification with CatsEffect {
 
     for {
       _ <- SparkUtils.initializeLocalDataFrame[IO](spark, viewName)
-      _ <- SparkUtils.localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Row(Row("v1")))), schema1, shouldRestoreNullability = true)
-      _ <- SparkUtils
-             .localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Row(Row("v2"), null))), schema2, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Row(Row("v1")))), schema1, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Row(Row("v2"), null))), schema2, shouldRestoreNullability = true)
       outerNullable <- IO.blocking {
                          spark
                            .table(viewName)
@@ -353,11 +362,8 @@ class SparkUtilsSpec extends Specification with CatsEffect {
 
     for {
       _ <- SparkUtils.initializeLocalDataFrame[IO](spark, viewName)
-      _ <- SparkUtils
-             .localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Row(Seq(Row("v1"))))), schema1, shouldRestoreNullability = true)
-      _ <-
-        SparkUtils
-          .localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Row(Seq(Row("v2", null))))), schema2, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Row(Seq(Row("v1"))))), schema1, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Row(Seq(Row("v2", null))))), schema2, shouldRestoreNullability = true)
       colANullable <- IO.blocking {
                         spark
                           .table(viewName)
@@ -414,9 +420,9 @@ class SparkUtilsSpec extends Specification with CatsEffect {
 
     for {
       _ <- SparkUtils.initializeLocalDataFrame[IO](spark, viewName)
-      _ <- SparkUtils.localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Row("v1"))), schema1, shouldRestoreNullability = true)
-      _ <- SparkUtils.localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Row("v2", null))), schema2, shouldRestoreNullability = true)
-      _ <- SparkUtils.localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Row("v3", null))), schema3, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Row("v1"))), schema1, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Row("v2", null))), schema2, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Row("v3", null))), schema3, shouldRestoreNullability = true)
       (colANullable, colBNullable) <- IO.blocking {
                                         val inner = spark
                                           .table(viewName)
@@ -460,8 +466,8 @@ class SparkUtilsSpec extends Specification with CatsEffect {
 
     for {
       _ <- SparkUtils.initializeLocalDataFrame[IO](spark, viewName)
-      _ <- SparkUtils.localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Row(null))), schema1, shouldRestoreNullability = true)
-      _ <- SparkUtils.localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Row("v2"))), schema2, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Row(null))), schema1, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Row("v2"))), schema2, shouldRestoreNullability = true)
       (colANullable, nullCount) <- IO.blocking {
                                      import spark.implicits._
                                      val df = spark.table(viewName)
@@ -516,9 +522,8 @@ class SparkUtilsSpec extends Specification with CatsEffect {
 
     for {
       _ <- SparkUtils.initializeLocalDataFrame[IO](spark, viewName)
-      _ <- SparkUtils.localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Seq(Row("v1")))), schema1, shouldRestoreNullability = true)
-      _ <- SparkUtils
-             .localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Seq(Row("v2", null)))), schema2, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Seq(Row("v1")))), schema1, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Seq(Row("v2", null)))), schema2, shouldRestoreNullability = true)
       containsNull <- IO.blocking {
                         spark
                           .table(viewName)
@@ -572,9 +577,8 @@ class SparkUtilsSpec extends Specification with CatsEffect {
 
     for {
       _ <- SparkUtils.initializeLocalDataFrame[IO](spark, viewName)
-      _ <- SparkUtils.localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Seq(Row(null)))), schema1, shouldRestoreNullability = true)
-      _ <- SparkUtils
-             .localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Seq(Row("v2", null)))), schema2, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Seq(Row(null)))), schema1, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Seq(Row("v2", null)))), schema2, shouldRestoreNullability = true)
       colANullable <- IO.blocking {
                         spark
                           .table(viewName)
@@ -613,8 +617,8 @@ class SparkUtilsSpec extends Specification with CatsEffect {
 
     for {
       _ <- SparkUtils.initializeLocalDataFrame[IO](spark, viewName)
-      _ <- SparkUtils.localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Row("v1"))), schema1, shouldRestoreNullability = true)
-      _ <- SparkUtils.localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Row("v2", null))), schema2, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Row("v1"))), schema1, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Row("v2", null))), schema2, shouldRestoreNullability = true)
       colBNullable <- IO.blocking {
                         spark
                           .table(viewName)
@@ -678,9 +682,8 @@ class SparkUtilsSpec extends Specification with CatsEffect {
 
     for {
       _ <- SparkUtils.initializeLocalDataFrame[IO](spark, viewName)
-      _ <- SparkUtils.localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Row(Row(null)))), schema1, shouldRestoreNullability = true)
-      _ <- SparkUtils
-             .localAppendRows[IO](spark, viewName, NonEmptyList.one(Row(Row(Row("v2", null)))), schema2, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Row(Row(null)))), schema1, shouldRestoreNullability = true)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(Row(Row("v2", null)))), schema2, shouldRestoreNullability = true)
       colANullable <- IO.blocking {
                         spark
                           .table(viewName)
@@ -704,11 +707,14 @@ class SparkUtilsSpec extends Specification with CatsEffect {
   // The window must keep one partition per batch, not collapse to a single partition (which would
   // serialize the map-side read). Asserts N batches -> N partitions.
   def e13 = withSpark.use { spark =>
+    val schema = StructType(Array(StructField("col_a", StringType, nullable = false)))
+
+    // One staging level is enough: both go through the same `checkpointedDataFrame`, and a storage
+    // level cannot change how many partitions the staged RDD has.
     val viewName = "test_partition_accumulation_e13"
-    val schema   = StructType(Array(StructField("col_a", StringType, nullable = false)))
 
     def append(row: Row) =
-      SparkUtils.localAppendRows[IO](spark, viewName, NonEmptyList.one(row), schema, shouldRestoreNullability = true)
+      localAppendRows(spark, viewName, NonEmptyList.one(row), schema, shouldRestoreNullability = true, stageOffHeap = false)
 
     for {
       _ <- SparkUtils.initializeLocalDataFrame[IO](spark, viewName)
@@ -717,6 +723,126 @@ class SparkUtilsSpec extends Specification with CatsEffect {
       _ <- append(Row("v3"))
       numPartitions <- IO.blocking(spark.table(viewName).rdd.getNumPartitions)
     } yield numPartitions must beEqualTo(3)
+  }
+
+  // SparkCaster emits java.time.Instant for timestamps and java.time.LocalDate for dates. With
+  // spark.sql.datetime.java8API.enabled left at its default of false, only a lenient encoder
+  // accepts those types - a strict one takes java.sql.Timestamp/Date and fails on these. This
+  // pins that, since the failure would otherwise only show up under load with real events.
+  def e14 = withSpark.use { spark =>
+    val viewName = "test_java8_time_encoding_e14"
+    val schema = StructType(
+      Array(
+        StructField("col_tstamp", TimestampType, nullable = false),
+        StructField("col_date", DateType, nullable        = false)
+      )
+    )
+    val instant = Instant.parse("2026-08-27T14:16:00Z")
+    val date    = LocalDate.of(2026, 8, 27)
+
+    for {
+      _ <- SparkUtils.initializeLocalDataFrame[IO](spark, viewName)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row(instant, date)), schema, shouldRestoreNullability = true)
+      // Read back as epoch micros/days rather than java.sql.Timestamp/Date. The loader never makes
+      // that conversion either - it writes parquet straight from the internal representation - and
+      // Spark's toJavaDate needs --add-opens java.base/sun.util.calendar on a modern JDK.
+      collected <- IO.blocking {
+                     spark
+                       .table(viewName)
+                       .selectExpr("unix_micros(col_tstamp) as micros", "datediff(col_date, to_date('1970-01-01')) as days")
+                       .collect()
+                       .toList
+                       .map(r => (r.getLong(0), r.getInt(1).toLong))
+                   }
+    } yield collected must beEqualTo(List((ChronoUnit.MICROS.between(Instant.EPOCH, instant), date.toEpochDay)))
+  }
+
+  // The encoder returned by rowEncoder reuses a single output row, so encodeBatch must copy each
+  // result. Without the copy every row in the batch would come back holding the last row's values.
+  def e15 = withSpark.use { spark =>
+    val viewName = "test_batch_encoding_distinct_e15"
+    val schema   = StructType(Array(StructField("col_a", StringType, nullable = false)))
+    val rows     = NonEmptyList.of(Row("v1"), Row("v2"), Row("v3"))
+
+    for {
+      _ <- SparkUtils.initializeLocalDataFrame[IO](spark, viewName)
+      _ <- localAppendRows(spark, viewName, rows, schema, shouldRestoreNullability = true)
+      collected <- IO.blocking(spark.table(viewName).collect().toList.map(_.getString(0)).sorted)
+    } yield collected must beEqualTo(List("v1", "v2", "v3"))
+  }
+
+  // Spark silently drops useOffHeap when normalising the checkpoint storage level, so assert where
+  // the staged bytes landed rather than which level we asked for. SnowplowInternalSparkBridgeSpec
+  // covers the level itself.
+  def e16 = withSpark.use { spark =>
+    val viewName = "test_offheap_staging_e16"
+    val schema   = StructType(Array(StructField("col_a", StringType, nullable = false)))
+
+    for {
+      _ <- SparkUtils.initializeLocalDataFrame[IO](spark, viewName)
+      _ <- localAppendRows(spark, viewName, NonEmptyList.one(Row("v1")), schema, shouldRestoreNullability = true, stageOffHeap = true)
+      blocks <- IO.blocking(SnowplowSparkBlockProbe.persistedBlocks(spark))
+    } yield {
+      val offHeap = blocks.filter(_.useOffHeap)
+      // memSize > 0 also rules out `offHeap` being empty, which is what the heap path would leave.
+      // diskSize is 0 because nothing here competes for the pool; under load an evicted block on
+      // disk is expected, not a fault. See SparkUtils.stageBatchesOffHeap.
+      (offHeap.map(_.memSize).sum must be_>(0L)) and
+        (offHeap.map(_.diskSize).sum must beEqualTo(0L))
+    }
+  }
+
+  // AbstractSparkSpec's e12/e13 assert only output correctness, which is identical on both staging
+  // paths, so a broken HOCON merge or a leaked session would leave them silently exercising the
+  // heap. Assert the decision itself, over the whole chain: TestConfig -> SparkConf -> session ->
+  // stageBatchesOffHeap. storageFraction comes from reference.conf, so it also pins the merge.
+  def e17 = Files[IO].tempDirectory.use { tmpDir =>
+    def decisionFor(stageOffHeap: Boolean): IO[(Boolean, String)] = {
+      val config = TestConfig.defaults(TestConfig.Delta, tmpDir, stageOffHeap)
+      val delta = config.output.good match {
+        case d: Config.Delta => d
+        case other           => throw new IllegalStateException(s"Expected a Delta target but got $other")
+      }
+      SparkUtils.session[IO](config.spark, new DeltaWriter(delta), delta).use { spark =>
+        SparkUtils
+          .stageBatchesOffHeap[IO](spark)
+          .map(offHeap => (offHeap, spark.sparkContext.getConf.get("spark.memory.storageFraction")))
+      }
+    }
+
+    for {
+      requested <- decisionFor(stageOffHeap = true)
+      default <- decisionFor(stageOffHeap = false)
+    } yield (requested must beEqualTo((true, "0"))) and (default must beEqualTo((false, "0")))
+  }
+
+  // Dropping the temp view only removes the catalog entry; the checkpoint blocks stay in the block
+  // manager until Spark's ContextCleaner observes the RDD collected, which needs a GC. dropView is
+  // given the RDDs so it can release them at the point we know the window is dead. Asserts they are
+  // registered as persistent while the window is open, and gone once it is dropped.
+  //
+  // Both staging levels, because off-heap is the one where waiting for the ContextCleaner hurts
+  // most: filling the pool provokes no GC of its own.
+  def e18 = withSpark.use { spark =>
+    val schema = StructType(Array(StructField("col_a", StringType, nullable = false)))
+
+    def releasedOnDrop(viewName: String, stageOffHeap: Boolean) = {
+      def append(row: Row) =
+        localAppendRows(spark, viewName, NonEmptyList.one(row), schema, shouldRestoreNullability = true, stageOffHeap = stageOffHeap)
+
+      for {
+        _ <- SparkUtils.initializeLocalDataFrame[IO](spark, viewName)
+        rdds <- List(Row("v1"), Row("v2"), Row("v3")).traverse(append)
+        persistedWhileOpen <- IO.blocking(rdds.map(_.id).count(spark.sparkContext.getPersistentRDDs.contains))
+        _ <- SparkUtils.dropView[IO](spark, viewName, rdds)
+        persistedAfterDrop <- IO.blocking(rdds.map(_.id).count(spark.sparkContext.getPersistentRDDs.contains))
+      } yield (rdds.size, persistedWhileOpen, persistedAfterDrop)
+    }
+
+    for {
+      onHeap <- releasedOnDrop("test_unpersist_on_drop_e18_heap", stageOffHeap = false)
+      offHeap <- releasedOnDrop("test_unpersist_on_drop_e18_offheap", stageOffHeap = true)
+    } yield (onHeap must beEqualTo((3, 3, 0))) and (offHeap must beEqualTo((3, 3, 0)))
   }
 
   // Guards the LakeLoaderFileSystem override on GCS: the gs scheme resolves to hadoop-gcp via
@@ -746,9 +872,44 @@ class SparkUtilsSpec extends Specification with CatsEffect {
 }
 
 object SparkUtilsSpec {
+
+  /**
+   * `SparkUtils.encodeBatch`, then `stageBatch`, then `appendStagedBatch`.
+   *
+   * Production code deliberately keeps the three steps apart, so that encoding and staging run
+   * outside the append mutex - see `LakeWriter`. These tests are single-threaded and only care
+   * about the combined effect, so they stitch them back together here.
+   *
+   * Passes through the RDD holding the batch's checkpoint blocks, which `e18` asserts on.
+   */
+  private def localAppendRows(
+    spark: SparkSession,
+    viewName: String,
+    rows: NonEmptyList[Row],
+    igluSchema: StructType,
+    shouldRestoreNullability: Boolean,
+    stageOffHeap: Boolean = false
+  ): IO[RDD[InternalRow]] =
+    for {
+      encoded <- SparkUtils.encodeBatch[IO](spark, rows, igluSchema)
+      staged <- SparkUtils.stageBatch[IO](spark, encoded, igluSchema, stageOffHeap)
+      _ <- SparkUtils.appendStagedBatch[IO](spark, viewName, staged.df, igluSchema, shouldRestoreNullability)
+    } yield staged.checkpointed
+
   private def withSpark: Resource[IO, SparkSession] = {
     val build = IO.blocking(
-      SparkSession.builder().master("local").appName("SparkUtilsSpec").getOrCreate()
+      SparkSession
+        .builder()
+        .master("local")
+        .appName("SparkUtilsSpec")
+        // e13, e16 and e18 stage off-heap, which needs a pool.
+        .config("spark.memory.offHeap.enabled", "true")
+        .config("spark.memory.offHeap.size", 256L * 1024 * 1024)
+        // Match reference.conf rather than Spark's default of 0.5: staged blocks own none of the
+        // pool and have to borrow from the execution region. e16 passing is what proves borrowing
+        // works, so do not "fix" this by giving storage a guaranteed share.
+        .config("spark.memory.storageFraction", "0")
+        .getOrCreate()
     )
     Resource.make(build)(s => IO.blocking(s.close()))
   }
